--- a/css/qrcode.css
+++ b/css/qrcode.css
@@ -1,3 +1,6 @@
+html {
+    font-size: 16px;
+}
 body {
     background-color: #D6E1F0;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
